--- a/company.G03.PL/company.G03.PL.csproj
+++ b/company.G03.PL/company.G03.PL.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\company.G3.BLL\company.G3.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\files\images\" />
+  </ItemGroup>
+
 </Project>
